# audio-amplifier-app

./: README.md  pubspec.yaml
.github/workflows/: build.yml
android/: build.gradle  local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp
lib/: audio_engine.dart  main.dart
